--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="color4">#3164d7</color>
     <color name="color5">#2e9641</color>
     <color name="colorw">#ffffff</color>
+    <color name="colorBlack">#000</color>
 
     <color name="grey_3">#f7f7f7</color>
     <color name="grey_5">#f2f2f2</color>
