--- a/app/src/main/res/layout/include_navigation_drawer.xml
+++ b/app/src/main/res/layout/include_navigation_drawer.xml
@@ -22,6 +22,22 @@
         app:civ_shadow="true"
         app:civ_shadow_radius="0" />
 
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/edit"
+        android:layout_width="22dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/ic_edit_black_24dp"
+        app:civ_border_width="2dp"
+        app:civ_shadow="true"
+        app:civ_shadow_radius="0" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
