--- a/app/src/main/res/layout/get_info_list.xml
+++ b/app/src/main/res/layout/get_info_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent_layout_get_info_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,21 +7,42 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Asset Type: "
+        android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="15sp" />
+
+    <TextView
         android:id="@+id/asset_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_toRightOf="@id/text"
         android:text="Asset Type"
         android:textAllCaps="true"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/asset_number"
+        android:text="Number: "
+        android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp" />
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/asset_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Asset Number"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:text="Number"
+        android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="18sp" />
-</LinearLayout>
+        android:textSize="15sp" />
+</RelativeLayout>
