--- a/app/src/main/res/layout/fragment_fragment_department.xml
+++ b/app/src/main/res/layout/fragment_fragment_department.xml
@@ -6,33 +6,37 @@
     android:orientation="vertical"
     tools:context=".FragmentDepartment">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="105dp"
-                android:layout_height="match_parent"
-                android:text="Department"
-                android:textAlignment="center" />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:hint="Department">
 
-            <EditText
-                android:id="@+id/department"
-                android:layout_width="177dp"
-                android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/department"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/get_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Get Info" />
         </LinearLayout>
 
