--- a/app/src/main/res/layout/fragment_fragment_date.xml
+++ b/app/src/main/res/layout/fragment_fragment_date.xml
@@ -12,27 +12,33 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:text="Year"
-                android:textAlignment="center" />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:hint="Year">
 
-            <EditText
-                android:id="@+id/asset_year"
-                android:layout_width="125dp"
-                android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/asset_year"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/get_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Get Info" />
+        </LinearLayout>
 
             <Button
                 android:id="@+id/view_graph"
@@ -40,25 +46,29 @@
                 android:layout_height="wrap_content"
                 android:text="View Analytics" />
 
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/result_on"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
-            android:id="@+id/result_before"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
+        <!--<TextView-->
+        <!--android:id="@+id/result_on"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="16sp" />-->
 
-        <TextView
-            android:id="@+id/result_after"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
+        <!--<TextView-->
+        <!--android:id="@+id/result_before"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="16sp" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/result_after"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="16sp" />-->
     </LinearLayout>
 
 </FrameLayout>
