*Implemented Year RecyclerView

--- a/app/src/main/res/layout/fragment_fragment_date.xml
+++ b/app/src/main/res/layout/fragment_fragment_date.xml
@@ -50,7 +50,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent">
+        </androidx.recyclerview.widget.RecyclerView>
 
         <!--<TextView-->
         <!--android:id="@+id/result_on"-->
