*Implemented Asset Type RecyclerView

--- a/app/src/main/res/layout/fragment_fragment_department.xml
+++ b/app/src/main/res/layout/fragment_fragment_department.xml
@@ -44,7 +44,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
 
 
     </LinearLayout>
