--- a/app/src/main/res/layout/fragment_asset_type.xml
+++ b/app/src/main/res/layout/fragment_asset_type.xml
@@ -34,6 +34,12 @@
                 android:text="Get Info" />
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
+
         <TextView
             android:id="@+id/result"
             android:layout_width="wrap_content"
