*Implemented Asset View RecyclerView

--- a/app/src/main/res/layout/fragment_value.xml
+++ b/app/src/main/res/layout/fragment_value.xml
@@ -6,55 +6,60 @@
     tools:context=".FragmentValue">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="30dp">
+            android:layout_margin="20dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="94dp"
-                android:layout_height="match_parent"
-                android:text="Asset Value"
-                android:textAlignment="center" />
-
-            <EditText
-                android:id="@+id/asset_value"
-                android:layout_width="207dp"
+            <Spinner
+                android:id="@+id/spinner_value"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:prompt="@string/spinner_title" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_weight="1"
+                android:hint="Asset Value">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/asset_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/get_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Get Info" />
-
         </LinearLayout>
+
         <Button
             android:id="@+id/view_graph"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="View Analytics"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:text="View Analytics" />
 
-        <TextView
-            android:paddingTop="15dp"
-            android:text="Number of Assets With Value Higher or Equal:"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </androidx.recyclerview.widget.RecyclerView>
 
-        <TextView
-            android:id="@+id/result"
-            android:textSize="18sp"
-            android:textAllCaps="true"
-            android:layout_width="208dp"
-            android:layout_height="104dp" />
     </LinearLayout>
 
 
