*Implemented Search By Admin RecyclerView

--- a/app/src/main/res/layout/activity_get_asset_info.xml
+++ b/app/src/main/res/layout/activity_get_asset_info.xml
@@ -17,7 +17,7 @@
 
     <ListView
         android:id="@+id/list_item"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
     <!--<TextView-->
