--- a/app/src/main/res/layout/get_info_list.xml
+++ b/app/src/main/res/layout/get_info_list.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/parent_layout_get_info_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="15dp"
     android:orientation="horizontal">
 
