--- a/app/src/main/res/layout/activity_normal_user.xml
+++ b/app/src/main/res/layout/activity_normal_user.xml
@@ -53,6 +53,13 @@
                     android:layout_gravity="center"
                     android:text="Request Asset" />
 
+                <Button
+                    android:id="@+id/issued_assets"
+                    android:layout_width="215dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Issued Assets" />
+
             </LinearLayout>
 
         </LinearLayout>
