*Implemented Label Generation

--- a/app/src/main/res/layout/activity_issuing_assets.xml
+++ b/app/src/main/res/layout/activity_issuing_assets.xml
@@ -140,4 +140,10 @@
         android:layout_gravity="center"
         android:text="Generate QR Code" />
 
+    <TextView
+        android:id="@+id/label_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 </LinearLayout>
