--- a/app/src/main/res/layout/fragment_fragment_department.xml
+++ b/app/src/main/res/layout/fragment_fragment_department.xml
@@ -37,7 +37,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Get Info" />
+                android:text="Get Info"
+                android:layout_marginRight="7dp"/>
+
+            <Button
+                android:id="@+id/view_analytics"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Analytics" />
         </LinearLayout>
 
 
