--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Copyright 2019, CRIE, M.I.E.T " />
+        android:text="Copyright" />
 
 
 </LinearLayout>
